...
    <string name="error_invalid_password">This password is too short</string>
    <!--<string name="error_incorrect_password">This password is incorrect</string> -->
    <!-- <string name="error_field_required">This field is required</string> -->
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Register</string>
    <!--<string name="unfinishedPlaceholder">Welcome to The Unfinished App!</string> -->
    <!--<string name="LogoutButton">Logout</string> -->
    <!--<string name="title_activity_application">ApplicationActivity</string> -->
    <string name="lost_item_title">Lost items</string>
    <string name="exit_app_message">Close</string>
    <string name="title_activity_lost_items">LostItems</string>
    <string name="title_activity_add_item">Add a Item</string>
    <string name="item_name_field">Name of Item</string>
    <string name="item_description_field">Description of Item</string>
    <string name="list_item_button">List Item as Missing</string>
    <string name="cancel_item_list">Cancel</string>
...
